objects/DMAPP__DM_Value_Map_Question__c.object
<CustomObject>
    <fields>
        <fullName>DMAPP__Category__c</fullName>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>Value to Us</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Value to Customer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DMAPP__DealmakerID__c</fullName>
        <description>An external ID used for Dealmaker</description>
        <externalId>true</externalId>
        <label>DealmakerID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DMAPP__Field__c</fullName>
        <description>Do not change</description>
        <label>Field</label>
        <picklist>
            <picklistValues>
                <fullName>Amount</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Level of Relationship</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DMAPP__SortOrder__c</fullName>
        <label>SortOrder</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMAPP__Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Multi Value</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Related Field Value</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Value Map Question</label>
    <listViews>
        <fullName>DMAPP__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Value Map Question Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Value Map Questions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>